# log-intrusion-detection

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: rules.json
data/: corpus_labels.csv  corpus_meta.json  sample_labels.csv
scripts/: build_corpus.py  run_demo.py
src/logids/: __init__.py  cli.py  correlation.py  detector.py  evaluation.py  matchers.py  models.py  parser.py  report.py
tests/: test_logids.py
