[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "log-ids"
version = "1.0.0"
description = "Explainable multi-source log intrusion detection with attack chain correlation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chenyao Guo"}]
keywords = [
    "intrusion-detection",
    "log-analysis",
    "pattern-matching",
    "anomaly-detection",
    "attack-chain",
    "cybersecurity",
    "kmp",
    "ids",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"

[project.optional-dependencies]
demo = ["matplotlib>=3.5", "numpy>=1.20"]
dev = ["pytest>=7.0"]

[project.scripts]
logids = "logids.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
